fixed whitespace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,11 @@
 html {
-    height: 100%;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 body {
@@ -10,7 +13,6 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 
 .navbar {
